fixed overflow of navbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@
 * {
   scroll-behavior: smooth;
 }
-
+body{
+  overflow-x: hidden;
+}
 img{
   display: inline-block;
   border-style: solid;
